--- a/datasets/wise-unwise.yaml
+++ b/datasets/wise-unwise.yaml
@@ -1,5 +1,5 @@
 Name: "Unblurred Coadds of the Wide-field Infrared Survey Explorer (unWISE)"
-Description: "unWISE is a reprocessing of Wide-field Infrared Survey Explorer (WISE) data which preserves the native angular resolution and is optimized for forced photometry. WISE was a NASA satellite producing all-sky imaging in four infrared bands centered at 3.4, 4.6, 12 and 22 microns (W1, W2, W3, and W4) starting in 2010 until the coolant was exhausted in 2011. It was reactivated in 2013 as NEOWISE and continued imaging in W1 and W2 until 2024. "
+Description: "unWISE is a reprocessing of Wide-field Infrared Survey Explorer (WISE) data which preserves the native angular resolution and is optimized for forced photometry. WISE was a NASA satellite producing all-sky imaging in four infrared bands centered at 3.4, 4.6, 12 and 22 microns (W1, W2, W3, and W4) starting in 2010 until the coolant was exhausted in 2011. It was reactivated in 2013 as NEOWISE and continued imaging in W1 and W2 until 2024."
 Documentation: https://irsa.ipac.caltech.edu/data/WISE/unWISE/overview.html
 Contact: https://irsa.ipac.caltech.edu/docs/help_desk.html
 ManagedBy: "NASA/IPAC Infrared Science Archive ([IRSA](https://irsa.ipac.caltech.edu)) at Caltech"
@@ -13,8 +13,7 @@ Tags:
   - satellite imagery
   - survey
 License: https://irsa.ipac.caltech.edu/data_use_terms.html
-Citation: "If you use the unWISE Time-Domain Catalog, please cite the dataset Digital Object Identifier (DOI):
-[10.26131/IRSA580](https://www.ipac.caltech.edu/doi/irsa/10.26131/IRSA580). In addition, follow the [unWISE acknowledgement guidelines](https://irsa.ipac.caltech.edu/data/WISE/unWISE/overview.html) and the [IRSA acknowledgement guidelines](https://irsa.ipac.caltech.edu/ack.html)."
+Citation: "If you use the unWISE Time-Domain Catalog, please cite the dataset Digital Object Identifier (DOI): [10.26131/IRSA580](https://www.ipac.caltech.edu/doi/irsa/10.26131/IRSA580). In addition, follow the [unWISE acknowledgement guidelines](https://irsa.ipac.caltech.edu/data/WISE/unWISE/overview.html) and the [IRSA acknowledgement guidelines](https://irsa.ipac.caltech.edu/ack.html)."
 Resources:
   - Description: "The unWISE Time-Domain Catalog is based on 'time-resolved' coadds, each of which stacks together the WISE/NEOWISE exposures from one (biannual) sky pass. It includes 43 billion total detections in W1 and W2. It is available in Apache Parquet, partitioned by HEALPix order 5."
     ARN: arn:aws:s3:::nasa-irsa-wise/unwise/
